# ChessGame

./: .gitignore  CMakeLists.txt  README.md  TODO.md  game  main.cpp  makefile  test  test.cpp
assets/: board.xcf  pieces.xcf
include/: color.hpp  move_path.hpp  piece.hpp  piece_behavior.hpp  position.hpp  puzzle.hpp
include/controller/: boardController.hpp
include/model/: color.hpp  coordinate.hpp  game.hpp  history.hpp  iterator.hpp  location.hpp  move_path.hpp  parser.hpp  path.hpp  piece.hpp  player.hpp  position.hpp  specialized_pieces.hpp  type.hpp
include/view/: board.hpp
src/: game.cpp  game.hpp  game_types.cpp  game_types.hpp  move_path.cpp  parser.cpp  parser.hpp  piece.cpp  piece_behavior.cpp  puzzle.cpp
src/assets/: regex.txt
src/controller/: boardController.cpp
src/model/: color.cpp  game.cpp  history.cpp  location.cpp  move_path.cpp  parser.cpp  path.cpp  piece.cpp  piece_behavior.cpp  specialized_pieces.cpp  type.cpp
src/view/: board.cpp
test/: game  test_logic.cpp  test_parser.cpp
test/games/: game_1977000.txt  game_1977001.txt  game_1977003.txt  game_1977004.txt  game_1977005.txt  game_1977007.txt  game_1977008.txt  game_1977010.txt  game_1977011.txt  game_1977012.txt  game_1977013.txt  game_1977015.txt  game_1977016.txt  game_1977017.txt  game_1977019.txt  game_1977020.txt  game_1977021.txt  game_1977023.txt  game_1977025.txt  game_1977026.txt  game_1977027.txt  game_1977028.txt  game_1977030.txt  game_1977031.txt  game_1977033.txt  game_1977035.txt  game_1977036.txt  game_1977038.txt  game_1977039.txt  game_1977040.txt  game_1977042.txt  game_1977043.txt  game_1977044.txt  game_1977046.txt  game_1977048.txt  game_1977049.txt  game_1977051.txt  game_1977053.txt  game_1977055.txt  game_1977056.txt  (+138 more)
